[gd_scene load_steps=25 format=3 uid="uid://c2hceqn1nde6k"]

[ext_resource type="Script" uid="uid://dk8iaxbthytt7" path="res://Scenes/enemy.gd" id="1_287tu"]
[ext_resource type="Texture2D" uid="uid://bmcuvbjs4tncw" path="res://assets/enemy/cat_hurt.png" id="2_287tu"]
[ext_resource type="Texture2D" uid="uid://dqdedvtjkywt1" path="res://assets/enemy/cat_melee.png" id="3_287tu"]
[ext_resource type="Texture2D" uid="uid://dpqw78dktvmok" path="res://assets/enemy/cat_move.png" id="3_afpow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("2_287tu")
region = Rect2(0, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("2_287tu")
region = Rect2(384, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("2_287tu")
region = Rect2(768, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4x7e"]
atlas = ExtResource("3_287tu")
region = Rect2(1920, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjcj6"]
atlas = ExtResource("3_287tu")
region = Rect2(2304, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ycey"]
atlas = ExtResource("3_287tu")
region = Rect2(2688, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cim4"]
atlas = ExtResource("3_287tu")
region = Rect2(3072, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x82w"]
atlas = ExtResource("3_287tu")
region = Rect2(3456, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt4ob"]
atlas = ExtResource("3_afpow")
region = Rect2(0, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeoe"]
atlas = ExtResource("3_afpow")
region = Rect2(384, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xo"]
atlas = ExtResource("3_afpow")
region = Rect2(768, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl1n"]
atlas = ExtResource("3_afpow")
region = Rect2(1152, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("3_afpow")
region = Rect2(1536, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdhn"]
atlas = ExtResource("3_afpow")
region = Rect2(1920, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jyny"]
atlas = ExtResource("3_afpow")
region = Rect2(2304, 0, 384, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh8xy"]
atlas = ExtResource("3_afpow")
region = Rect2(2688, 0, 384, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ve8xs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ycey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x82w")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt4ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jyny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh8xy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_287tu"]
radius = 19.5
height = 49.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0830c"]
size = Vector2(333, 121)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ghaa6"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_287tu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -51)
scale = Vector2(0.833969, 0.998382)
sprite_frames = SubResource("SpriteFrames_ve8xs")
animation = &"die"
autoplay = "walk"
frame = 2
frame_progress = 1.0

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_287tu")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(4, -65)
shape = SubResource("RectangleShape2D_0830c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_ghaa6")
